background color td hover, display: none shape

--- a/index.html
+++ b/index.html
@@ -11,19 +11,64 @@
 <body>
     <table>
         <tr>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
         </tr>
         <tr>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
         </tr>
         <tr>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
-            <td><div class="shape-container"><img src="./img/cross.png" class="shape" alt=""><img src="./img/circle.png" class="shape" alt=""></div></td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td>
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
         </tr>
     </table>
     
