--- a/index.html
+++ b/index.html
@@ -11,39 +11,19 @@
 <body>
     <table>
         <tr>
-            <td>
+            <td onclick="fillGame(0)">
+                <div  class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td onclick="fillGame(1)">
                 <div class="shape-container">
                     <img src="./img/cross.png" class="shape d-none" alt="">
                     <img src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
-            <td>
-                <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
-                </div>
-            </td>
-            <td>
-                <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
-                </div>
-            </td>
-            <td>
-                <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
-                </div>
-            </td>
-            <td>
+            <td onclick="fillGame(2)">
                 <div class="shape-container">
                     <img src="./img/cross.png" class="shape d-none" alt="">
                     <img src="./img/circle.png" class="shape d-none" alt="">
@@ -51,19 +31,39 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td onclick="fillGame(3)">
                 <div class="shape-container">
                     <img src="./img/cross.png" class="shape d-none" alt="">
                     <img src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
-            <td>
+            <td onclick="fillGame(4)">
                 <div class="shape-container">
                     <img src="./img/cross.png" class="shape d-none" alt="">
                     <img src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
-            <td>
+            <td onclick="fillGame(5)">
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td onclick="fillGame(6)">
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td onclick="fillGame(7)">
+                <div class="shape-container">
+                    <img src="./img/cross.png" class="shape d-none" alt="">
+                    <img src="./img/circle.png" class="shape d-none" alt="">
+                </div>
+            </td>
+            <td onclick="fillGame(8)">
                 <div class="shape-container">
                     <img src="./img/cross.png" class="shape d-none" alt="">
                     <img src="./img/circle.png" class="shape d-none" alt="">
