--- a/index.html
+++ b/index.html
@@ -13,60 +13,60 @@
         <tr>
             <td onclick="fillGame(0)">
                 <div  class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-0" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-0" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(1)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-1" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-1" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(2)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-2" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-2" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
         </tr>
         <tr>
             <td onclick="fillGame(3)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-3" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-3" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(4)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-4" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-4" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(5)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-5" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-5" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
         </tr>
         <tr>
             <td onclick="fillGame(6)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-6" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-6" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(7)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-7" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-7" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
             <td onclick="fillGame(8)">
                 <div class="shape-container">
-                    <img src="./img/cross.png" class="shape d-none" alt="">
-                    <img src="./img/circle.png" class="shape d-none" alt="">
+                    <img id="cross-8" src="./img/cross.png" class="shape d-none" alt="">
+                    <img id="circle-8" src="./img/circle.png" class="shape d-none" alt="">
                 </div>
             </td>
         </tr>
