actual player showed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="player-panel">
+        <div id="player1" class="player">
+            <img src="./img/cross.png" alt="">
+            <p>Player 1</p>
+        </div>
+        <div id="player2" class="player opacity">
+            <img src="./img/circle.png" alt="">
+            <p>Player 2</p>
+        </div>
+    </div>
     <table>
         <tr>
             <td onclick="fillGame(0)">
