against PC javascript added

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="against-pc.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <button onclick="resetGame()" id="resetButton" class="reset-button d-none">Restart</button>
     <div id="gameOver" class="game-over d-none">
-        <img src="./img/game-over.jpg" alt="">
+        <img src="./img/game-over.png" alt="">
+        <button onclick="resetGame()" id="resetButton" class="reset-button d-none">RESTART</button>
     </div>
-    <div class="player-panel">
-        <div id="player1" class="player">
+   
+        <div id="player1" class="player player-1">
             <img src="./img/cross.png" alt="">
             <p>Player 1</p>
         </div>
-        <div id="player2" class="player opacity">
+        <div id="player2" class="player player-2 opacity">
             <img src="./img/circle.png" alt="">
             <p>Player 2</p>
         </div>
-    </div>
+   
     <div id="line1" class="row-winner" style="top: 157px;"></div>
     <div id="line2" class="row-winner" style="top: 285px;"></div>
     <div id="line3" class="row-winner" style="top: 413px;"></div>
