responsive and style

--- a/oneplayer/oneplayer.html
+++ b/oneplayer/oneplayer.html
@@ -9,6 +9,9 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="home-icon">
+        <a href="../index.html"><img src="../img/home.jpg" alt=""></a>
+    </div>
     <div id="gameOver" class="game-over d-none">
         <img src="../img/game-over.png" alt="">
         <button onclick="resetGame()" id="resetButton" class="reset-button d-none">RESTART</button>
@@ -97,7 +100,7 @@
     </table>
     <div class="footer">
         <div>Impressum: Icons are provided by <a style="text-decoration: none; color: black;" href="https://fontawesome.com/">Font Awesome</a></div>
-    </div>s
+    </div>
     
 </body>
 </html>
