--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Tic Tac Toe</title>
+    <script>
+        let music = new Audio('./audio/soundtrack.mp3');
+        music.loop = true;
+        music.volume = 0.1;
+        function playMusic() {
+            music.play();
+        }
+    </script>
+
 </head>
+
 <body>
-    
+    <div class="game-container">
+        <div class="game-item">
+            <a href="./oneplayer/oneplayer.html">One Player</a>
+        </div>
+        <div class="game-item">
+            <a href="./twoplayer/twoplayer.html">Two Players</a>
+        </div>
+        <div class="game-item"><button onclick="playMusic()">Play Music</button></div>
+    </div>
+
 </body>
+
 </html>
