--- a/twoplayer/twoplayer.html
+++ b/twoplayer/twoplayer.html
@@ -9,6 +9,9 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="home-icon">
+        <a href="../index.html"><img src="../img/home.jpg" alt=""></a>
+    </div>
     <div id="gameOver" class="game-over d-none">
         <img src="../img/game-over.png" alt="">
         <button onclick="resetGame()" id="resetButton" class="reset-button d-none">RESTART</button>
